# graph-agents-benchmark

./: .gitignore  LICENSE.txt  README.md  __init__ .py  create_datasets_with_anwers.py  docker-compose.yaml  load_all_dumps.sh  main.py  main3.py  pyproject.toml
datasets/movies/: questions_and_answers_movies_filtered.jsonl  questions_and_answers_movies_unfiltered.jsonl
graph_agents_benchmark/src/: executor.py  models.py  settings.py
graph_agents_benchmark/src/infrastucture/: neo4jdocker.py
graph_agents_benchmark/src/llm/: llm_provider.py
graph_agents_benchmark/src/solutions/: base.py  langchain.py  llamaindex.py  text2neo.py
graph_agents_benchmark/src/utils/: data_loaders.py  qa_enricher.py
neo4j/dumps/: DATASET_INFO.md
text_to_cypher_benchmark/src/: executor.py  model_provider.py  models.py  schemas.py
text_to_cypher_benchmark/src/infrastucture/: main.py  neo4jdocker.py  tmp.py
text_to_cypher_benchmark/src/llm/: llm_provider.py
text_to_cypher_benchmark/src/solutions/: base.py  langchain.py  llamaindex.py  text2neo.py
text_to_cypher_benchmark/src/utils/: benchmark_data_loader.py  data_loaders.py  dataset_inforation.py  flight_accident_loader.py  huggingface_data_loader.py  neo4j_data_population.py  neo4j_integration.py  qa_enricher.py
